--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 	</div>
 	
  	<div id="categories" class="boxed">
-		<h2 class="heading">Personnel Info</h2>
+		<h2 class="heading">Personnel Département</h2>
 		<div class="content">
 			<ul>
 			{% for m in listeMembres %}
