--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@ Released for free under a Creative Commons Attribution 2.5 License
   <link href="{{url_for('static',filename='default.css')}}" rel="stylesheet" type="text/css" />
   
   <!-- Attention, ordre important ! -->
-  <script src="{{url_for('static',filename='./js/prototype.js')}}" type="text/javascript"></script>
-  <script src="{{url_for('static',filename='./js/scriptaculous/scriptaculous.js')}}" type="text/javascript"></script>
-  <script src="{{url_for('static',filename='./js/base.js')}}" type="text/javascript"></script>
+  <script src="{{url_for('static',filename='js/prototype.js')}}" type="text/javascript"></script>
+  <script src="{{url_for('static',filename='js/scriptaculous/scriptaculous.js')}}" type="text/javascript"></script>
+  <script src="{{url_for('static',filename='js/base.js')}}" type="text/javascript"></script>
  
 </head>
 
